Lab4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> instructions_opt
Rule 3     instructions_opt -> instructions
Rule 4     instructions_opt -> empty
Rule 5     instructions -> instruction
Rule 6     instructions -> instructions instruction
Rule 7     instruction -> assignment ;
Rule 8     instruction -> statement ;
Rule 9     instruction -> { instructions }
Rule 10    instruction -> IF ( condition ) instruction
Rule 11    instruction -> IF ( condition ) instruction ELSE instruction
Rule 12    instruction -> WHILE ( condition ) instruction
Rule 13    instruction -> FOR var = range instruction
Rule 14    range -> expression : expression
Rule 15    condition -> expression EQ expression
Rule 16    condition -> expression NEQ expression
Rule 17    condition -> expression LE expression
Rule 18    condition -> expression GE expression
Rule 19    condition -> expression < expression
Rule 20    condition -> expression > expression
Rule 21    assignment_op -> MULASSIGN
Rule 22    assignment_op -> DIVASSIGN
Rule 23    assignment_op -> SUBASSIGN
Rule 24    assignment_op -> ADDASSIGN
Rule 25    assignment_op -> =
Rule 26    assignment -> var assignment_op expression
Rule 27    assignment -> matrix_element assignment_op expression
Rule 28    assignment -> vector_element assignment_op expression
Rule 29    matrix_function -> EYE ( INT )
Rule 30    matrix_function -> ONES ( INT )
Rule 31    matrix_function -> ZEROS ( INT )
Rule 32    matrix -> [ vectors ]
Rule 33    vectors -> vectors , vector
Rule 34    vectors -> vector
Rule 35    vector -> [ variables ]
Rule 36    variables -> variables , variable
Rule 37    variables -> variable
Rule 38    variable -> number
Rule 39    variable -> var
Rule 40    variable -> element
Rule 41    element -> vector_element
Rule 42    element -> matrix_element
Rule 43    vector_element -> var [ INT ]
Rule 44    matrix_element -> var [ INT , INT ]
Rule 45    number -> INT
Rule 46    number -> FLOAT
Rule 47    string -> STRING
Rule 48    expression -> expression + expression
Rule 49    expression -> expression - expression
Rule 50    expression -> expression * expression
Rule 51    expression -> expression / expression
Rule 52    expression -> expression DOTADD expression
Rule 53    expression -> expression DOTSUB expression
Rule 54    expression -> expression DOTMUL expression
Rule 55    expression -> expression DOTDIV expression
Rule 56    expression -> num_expression
Rule 57    expression -> matrix
Rule 58    expression -> matrix_function
Rule 59    expression -> vector
Rule 60    expression -> uminus
Rule 61    expression -> transposition
Rule 62    expression -> matrix_element
Rule 63    expression -> vector_element
Rule 64    num_expression -> number
Rule 65    num_expression -> var
Rule 66    var -> ID
Rule 67    uminus -> - expression
Rule 68    transposition -> expression '
Rule 69    statement -> BREAK
Rule 70    statement -> CONTINUE
Rule 71    statement -> RETURN expression
Rule 72    statement -> PRINT print_vals
Rule 73    print_vals -> print_vals , print_val
Rule 74    print_vals -> print_val
Rule 75    print_val -> string
Rule 76    print_val -> expression

Terminals, with rules where they appear

'                    : 68
(                    : 10 11 12 29 30 31
)                    : 10 11 12 29 30 31
*                    : 50
+                    : 48
,                    : 33 36 44 73
-                    : 49 67
/                    : 51
:                    : 14
;                    : 7 8
<                    : 19
=                    : 13 25
>                    : 20
ADDASSIGN            : 24
BREAK                : 69
CONTINUE             : 70
DIVASSIGN            : 22
DOTADD               : 52
DOTDIV               : 55
DOTMUL               : 54
DOTSUB               : 53
ELSE                 : 11
EQ                   : 15
EYE                  : 29
FLOAT                : 46
FOR                  : 13
GE                   : 18
ID                   : 66
IF                   : 10 11
INT                  : 29 30 31 43 44 44 45
LE                   : 17
MULASSIGN            : 21
NEQ                  : 16
ONES                 : 30
PRINT                : 72
RETURN               : 71
STRING               : 47
SUBASSIGN            : 23
WHILE                : 12
ZEROS                : 31
[                    : 32 35 43 44
]                    : 32 35 43 44
error                : 
{                    : 9
}                    : 9

Nonterminals, with rules where they appear

assignment           : 7
assignment_op        : 26 27 28
condition            : 10 11 12
element              : 40
empty                : 4
expression           : 14 14 15 15 16 16 17 17 18 18 19 19 20 20 26 27 28 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 67 68 71 76
instruction          : 5 6 10 11 11 12 13
instructions         : 3 6 9
instructions_opt     : 2
matrix               : 57
matrix_element       : 27 42 62
matrix_function      : 58
num_expression       : 56
number               : 38 64
print_val            : 73 74
print_vals           : 72 73
program              : 0
range                : 13
statement            : 8
string               : 75
transposition        : 61
uminus               : 60
var                  : 13 26 39 43 44 65
variable             : 36 37
variables            : 35 36
vector               : 33 34 59
vector_element       : 28 41 63
vectors              : 32 33

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . instructions_opt
    (3) instructions_opt -> . instructions
    (4) instructions_opt -> . empty
    (5) instructions -> . instruction
    (6) instructions -> . instructions instruction
    (1) empty -> .
    (7) instruction -> . assignment ;
    (8) instruction -> . statement ;
    (9) instruction -> . { instructions }
    (10) instruction -> . IF ( condition ) instruction
    (11) instruction -> . IF ( condition ) instruction ELSE instruction
    (12) instruction -> . WHILE ( condition ) instruction
    (13) instruction -> . FOR var = range instruction
    (26) assignment -> . var assignment_op expression
    (27) assignment -> . matrix_element assignment_op expression
    (28) assignment -> . vector_element assignment_op expression
    (69) statement -> . BREAK
    (70) statement -> . CONTINUE
    (71) statement -> . RETURN expression
    (72) statement -> . PRINT print_vals
    (66) var -> . ID
    (44) matrix_element -> . var [ INT , INT ]
    (43) vector_element -> . var [ INT ]

    $end            reduce using rule 1 (empty -> .)
    {               shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    FOR             shift and go to state 11
    BREAK           shift and go to state 15
    CONTINUE        shift and go to state 16
    RETURN          shift and go to state 17
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    empty                          shift and go to state 4
    instruction                    shift and go to state 5
    assignment                     shift and go to state 6
    statement                      shift and go to state 7
    var                            shift and go to state 12
    matrix_element                 shift and go to state 13
    vector_element                 shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (2) program -> instructions_opt .

    $end            reduce using rule 2 (program -> instructions_opt .)


state 3

    (3) instructions_opt -> instructions .
    (6) instructions -> instructions . instruction
    (7) instruction -> . assignment ;
    (8) instruction -> . statement ;
    (9) instruction -> . { instructions }
    (10) instruction -> . IF ( condition ) instruction
    (11) instruction -> . IF ( condition ) instruction ELSE instruction
    (12) instruction -> . WHILE ( condition ) instruction
    (13) instruction -> . FOR var = range instruction
    (26) assignment -> . var assignment_op expression
    (27) assignment -> . matrix_element assignment_op expression
    (28) assignment -> . vector_element assignment_op expression
    (69) statement -> . BREAK
    (70) statement -> . CONTINUE
    (71) statement -> . RETURN expression
    (72) statement -> . PRINT print_vals
    (66) var -> . ID
    (44) matrix_element -> . var [ INT , INT ]
    (43) vector_element -> . var [ INT ]

    $end            reduce using rule 3 (instructions_opt -> instructions .)
    {               shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    FOR             shift and go to state 11
    BREAK           shift and go to state 15
    CONTINUE        shift and go to state 16
    RETURN          shift and go to state 17
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    instruction                    shift and go to state 20
    assignment                     shift and go to state 6
    statement                      shift and go to state 7
    var                            shift and go to state 12
    matrix_element                 shift and go to state 13
    vector_element                 shift and go to state 14

state 4

    (4) instructions_opt -> empty .

    $end            reduce using rule 4 (instructions_opt -> empty .)


state 5

    (5) instructions -> instruction .

    {               reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)


state 6

    (7) instruction -> assignment . ;

    ;               shift and go to state 21


state 7

    (8) instruction -> statement . ;

    ;               shift and go to state 22


state 8

    (9) instruction -> { . instructions }
    (5) instructions -> . instruction
    (6) instructions -> . instructions instruction
    (7) instruction -> . assignment ;
    (8) instruction -> . statement ;
    (9) instruction -> . { instructions }
    (10) instruction -> . IF ( condition ) instruction
    (11) instruction -> . IF ( condition ) instruction ELSE instruction
    (12) instruction -> . WHILE ( condition ) instruction
    (13) instruction -> . FOR var = range instruction
    (26) assignment -> . var assignment_op expression
    (27) assignment -> . matrix_element assignment_op expression
    (28) assignment -> . vector_element assignment_op expression
    (69) statement -> . BREAK
    (70) statement -> . CONTINUE
    (71) statement -> . RETURN expression
    (72) statement -> . PRINT print_vals
    (66) var -> . ID
    (44) matrix_element -> . var [ INT , INT ]
    (43) vector_element -> . var [ INT ]

    {               shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    FOR             shift and go to state 11
    BREAK           shift and go to state 15
    CONTINUE        shift and go to state 16
    RETURN          shift and go to state 17
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    instructions                   shift and go to state 23
    instruction                    shift and go to state 5
    assignment                     shift and go to state 6
    statement                      shift and go to state 7
    var                            shift and go to state 12
    matrix_element                 shift and go to state 13
    vector_element                 shift and go to state 14

state 9

    (10) instruction -> IF . ( condition ) instruction
    (11) instruction -> IF . ( condition ) instruction ELSE instruction

    (               shift and go to state 24


state 10

    (12) instruction -> WHILE . ( condition ) instruction

    (               shift and go to state 25


state 11

    (13) instruction -> FOR . var = range instruction
    (66) var -> . ID

    ID              shift and go to state 19

    var                            shift and go to state 26

state 12

    (26) assignment -> var . assignment_op expression
    (44) matrix_element -> var . [ INT , INT ]
    (43) vector_element -> var . [ INT ]
    (21) assignment_op -> . MULASSIGN
    (22) assignment_op -> . DIVASSIGN
    (23) assignment_op -> . SUBASSIGN
    (24) assignment_op -> . ADDASSIGN
    (25) assignment_op -> . =

    [               shift and go to state 28
    MULASSIGN       shift and go to state 29
    DIVASSIGN       shift and go to state 30
    SUBASSIGN       shift and go to state 31
    ADDASSIGN       shift and go to state 32
    =               shift and go to state 33

    assignment_op                  shift and go to state 27

state 13

    (27) assignment -> matrix_element . assignment_op expression
    (21) assignment_op -> . MULASSIGN
    (22) assignment_op -> . DIVASSIGN
    (23) assignment_op -> . SUBASSIGN
    (24) assignment_op -> . ADDASSIGN
    (25) assignment_op -> . =

    MULASSIGN       shift and go to state 29
    DIVASSIGN       shift and go to state 30
    SUBASSIGN       shift and go to state 31
    ADDASSIGN       shift and go to state 32
    =               shift and go to state 33

    assignment_op                  shift and go to state 34

state 14

    (28) assignment -> vector_element . assignment_op expression
    (21) assignment_op -> . MULASSIGN
    (22) assignment_op -> . DIVASSIGN
    (23) assignment_op -> . SUBASSIGN
    (24) assignment_op -> . ADDASSIGN
    (25) assignment_op -> . =

    MULASSIGN       shift and go to state 29
    DIVASSIGN       shift and go to state 30
    SUBASSIGN       shift and go to state 31
    ADDASSIGN       shift and go to state 32
    =               shift and go to state 33

    assignment_op                  shift and go to state 35

state 15

    (69) statement -> BREAK .

    ;               reduce using rule 69 (statement -> BREAK .)


state 16

    (70) statement -> CONTINUE .

    ;               reduce using rule 70 (statement -> CONTINUE .)


state 17

    (71) statement -> RETURN . expression
    (48) expression -> . expression + expression
    (49) expression -> . expression - expression
    (50) expression -> . expression * expression
    (51) expression -> . expression / expression
    (52) expression -> . expression DOTADD expression
    (53) expression -> . expression DOTSUB expression
    (54) expression -> . expression DOTMUL expression
    (55) expression -> . expression DOTDIV expression
    (56) expression -> . num_expression
    (57) expression -> . matrix
    (58) expression -> . matrix_function
    (59) expression -> . vector
    (60) expression -> . uminus
    (61) expression -> . transposition
    (62) expression -> . matrix_element
    (63) expression -> . vector_element
    (64) num_expression -> . number
    (65) num_expression -> . var
    (32) matrix -> . [ vectors ]
    (29) matrix_function -> . EYE ( INT )
    (30) matrix_function -> . ONES ( INT )
    (31) matrix_function -> . ZEROS ( INT )
    (35) vector -> . [ variables ]
    (67) uminus -> . - expression
    (68) transposition -> . expression '
    (44) matrix_element -> . var [ INT , INT ]
    (43) vector_element -> . var [ INT ]
    (45) number -> . INT
    (46) number -> . FLOAT
    (66) var -> . ID

    [               shift and go to state 48
    EYE             shift and go to state 49
    ONES            shift and go to state 51
    ZEROS           shift and go to state 52
    -               shift and go to state 37
    INT             shift and go to state 50
    FLOAT           shift and go to state 53
    ID              shift and go to state 19

    expression                     shift and go to state 36
    num_expression                 shift and go to state 38
    matrix                         shift and go to state 39
    matrix_function                shift and go to state 40
    vector                         shift and go to state 41
    uminus                         shift and go to state 42
    transposition                  shift and go to state 43
    matrix_element                 shift and go to state 44
    vector_element                 shift and go to state 45
    number                         shift and go to state 46
    var                            shift and go to state 47

state 18

    (72) statement -> PRINT . print_vals
    (73) print_vals -> . print_vals , print_val
    (74) print_vals -> . print_val
    (75) print_val -> . string
    (76) print_val -> . expression
    (47) string -> . STRING
    (48) expression -> . expression + expression
    (49) expression -> . expression - expression
    (50) expression -> . expression * expression
    (51) expression -> . expression / expression
    (52) expression -> . expression DOTADD expression
    (53) expression -> . expression DOTSUB expression
    (54) expression -> . expression DOTMUL expression
    (55) expression -> . expression DOTDIV expression
    (56) expression -> . num_expression
    (57) expression -> . matrix
    (58) expression -> . matrix_function
    (59) expression -> . vector
    (60) expression -> . uminus
    (61) expression -> . transposition
    (62) expression -> . matrix_element
    (63) expression -> . vector_element
    (64) num_expression -> . number
    (65) num_expression -> . var
    (32) matrix -> . [ vectors ]
    (29) matrix_function -> . EYE ( INT )
    (30) matrix_function -> . ONES ( INT )
    (31) matrix_function -> . ZEROS ( INT )
    (35) vector -> . [ variables ]
    (67) uminus -> . - expression
    (68) transposition -> . expression '
    (44) matrix_element -> . var [ INT , INT ]
    (43) vector_element -> . var [ INT ]
    (45) number -> . INT
    (46) number -> . FLOAT
    (66) var -> . ID

    STRING          shift and go to state 58
    [               shift and go to state 48
    EYE             shift and go to state 49
    ONES            shift and go to state 51
    ZEROS           shift and go to state 52
    -               shift and go to state 37
    INT             shift and go to state 50
    FLOAT           shift and go to state 53
    ID              shift and go to state 19

    print_vals                     shift and go to state 54
    print_val                      shift and go to state 55
    string                         shift and go to state 56
    expression                     shift and go to state 57
    num_expression                 shift and go to state 38
    matrix                         shift and go to state 39
    matrix_function                shift and go to state 40
    vector                         shift and go to state 41
    uminus                         shift and go to state 42
    transposition                  shift and go to state 43
    matrix_element                 shift and go to state 44
    vector_element                 shift and go to state 45
    number                         shift and go to state 46
    var                            shift and go to state 47

state 19

    (66) var -> ID .

    [               reduce using rule 66 (var -> ID .)
    MULASSIGN       reduce using rule 66 (var -> ID .)
    DIVASSIGN       reduce using rule 66 (var -> ID .)
    SUBASSIGN       reduce using rule 66 (var -> ID .)
    ADDASSIGN       reduce using rule 66 (var -> ID .)
    =               reduce using rule 66 (var -> ID .)
    +               reduce using rule 66 (var -> ID .)
    -               reduce using rule 66 (var -> ID .)
    *               reduce using rule 66 (var -> ID .)
    /               reduce using rule 66 (var -> ID .)
    DOTADD          reduce using rule 66 (var -> ID .)
    DOTSUB          reduce using rule 66 (var -> ID .)
    DOTMUL          reduce using rule 66 (var -> ID .)
    DOTDIV          reduce using rule 66 (var -> ID .)
    '               reduce using rule 66 (var -> ID .)
    ;               reduce using rule 66 (var -> ID .)
    ,               reduce using rule 66 (var -> ID .)
    EQ              reduce using rule 66 (var -> ID .)
    NEQ             reduce using rule 66 (var -> ID .)
    LE              reduce using rule 66 (var -> ID .)
    GE              reduce using rule 66 (var -> ID .)
    <               reduce using rule 66 (var -> ID .)
    >               reduce using rule 66 (var -> ID .)
    :               reduce using rule 66 (var -> ID .)
    )               reduce using rule 66 (var -> ID .)
    {               reduce using rule 66 (var -> ID .)
    IF              reduce using rule 66 (var -> ID .)
    WHILE           reduce using rule 66 (var -> ID .)
    FOR             reduce using rule 66 (var -> ID .)
    BREAK           reduce using rule 66 (var -> ID .)
    CONTINUE        reduce using rule 66 (var -> ID .)
    RETURN          reduce using rule 66 (var -> ID .)
    PRINT           reduce using rule 66 (var -> ID .)
    ID              reduce using rule 66 (var -> ID .)
    ]               reduce using rule 66 (var -> ID .)


state 20

    (6) instructions -> instructions instruction .

    {               reduce using rule 6 (instructions -> instructions instruction .)
    IF              reduce using rule 6 (instructions -> instructions instruction .)
    WHILE           reduce using rule 6 (instructions -> instructions instruction .)
    FOR             reduce using rule 6 (instructions -> instructions instruction .)
    BREAK           reduce using rule 6 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 6 (instructions -> instructions instruction .)
    RETURN          reduce using rule 6 (instructions -> instructions instruction .)
    PRINT           reduce using rule 6 (instructions -> instructions instruction .)
    ID              reduce using rule 6 (instructions -> instructions instruction .)
    $end            reduce using rule 6 (instructions -> instructions instruction .)
    }               reduce using rule 6 (instructions -> instructions instruction .)


state 21

    (7) instruction -> assignment ; .

    {               reduce using rule 7 (instruction -> assignment ; .)
    IF              reduce using rule 7 (instruction -> assignment ; .)
    WHILE           reduce using rule 7 (instruction -> assignment ; .)
    FOR             reduce using rule 7 (instruction -> assignment ; .)
    BREAK           reduce using rule 7 (instruction -> assignment ; .)
    CONTINUE        reduce using rule 7 (instruction -> assignment ; .)
    RETURN          reduce using rule 7 (instruction -> assignment ; .)
    PRINT           reduce using rule 7 (instruction -> assignment ; .)
    ID              reduce using rule 7 (instruction -> assignment ; .)
    $end            reduce using rule 7 (instruction -> assignment ; .)
    }               reduce using rule 7 (instruction -> assignment ; .)
    ELSE            reduce using rule 7 (instruction -> assignment ; .)


state 22

    (8) instruction -> statement ; .

    {               reduce using rule 8 (instruction -> statement ; .)
    IF              reduce using rule 8 (instruction -> statement ; .)
    WHILE           reduce using rule 8 (instruction -> statement ; .)
    FOR             reduce using rule 8 (instruction -> statement ; .)
    BREAK           reduce using rule 8 (instruction -> statement ; .)
    CONTINUE        reduce using rule 8 (instruction -> statement ; .)
    RETURN          reduce using rule 8 (instruction -> statement ; .)
    PRINT           reduce using rule 8 (instruction -> statement ; .)
    ID              reduce using rule 8 (instruction -> statement ; .)
    $end            reduce using rule 8 (instruction -> statement ; .)
    }               reduce using rule 8 (instruction -> statement ; .)
    ELSE            reduce using rule 8 (instruction -> statement ; .)


state 23

    (9) instruction -> { instructions . }
    (6) instructions -> instructions . instruction
    (7) instruction -> . assignment ;
    (8) instruction -> . statement ;
    (9) instruction -> . { instructions }
    (10) instruction -> . IF ( condition ) instruction
    (11) instruction -> . IF ( condition ) instruction ELSE instruction
    (12) instruction -> . WHILE ( condition ) instruction
    (13) instruction -> . FOR var = range instruction
    (26) assignment -> . var assignment_op expression
    (27) assignment -> . matrix_element assignment_op expression
    (28) assignment -> . vector_element assignment_op expression
    (69) statement -> . BREAK
    (70) statement -> . CONTINUE
    (71) statement -> . RETURN expression
    (72) statement -> . PRINT print_vals
    (66) var -> . ID
    (44) matrix_element -> . var [ INT , INT ]
    (43) vector_element -> . var [ INT ]

    }               shift and go to state 59
    {               shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    FOR             shift and go to state 11
    BREAK           shift and go to state 15
    CONTINUE        shift and go to state 16
    RETURN          shift and go to state 17
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    instruction                    shift and go to state 20
    assignment                     shift and go to state 6
    statement                      shift and go to state 7
    var                            shift and go to state 12
    matrix_element                 shift and go to state 13
    vector_element                 shift and go to state 14

state 24

    (10) instruction -> IF ( . condition ) instruction
    (11) instruction -> IF ( . condition ) instruction ELSE instruction
    (15) condition -> . expression EQ expression
    (16) condition -> . expression NEQ expression
    (17) condition -> . expression LE expression
    (18) condition -> . expression GE expression
    (19) condition -> . expression < expression
    (20) condition -> . expression > expression
    (48) expression -> . expression + expression
    (49) expression -> . expression - expression
    (50) expression -> . expression * expression
    (51) expression -> . expression / expression
    (52) expression -> . expression DOTADD expression
    (53) expression -> . expression DOTSUB expression
    (54) expression -> . expression DOTMUL expression
    (55) expression -> . expression DOTDIV expression
    (56) expression -> . num_expression
    (57) expression -> . matrix
    (58) expression -> . matrix_function
    (59) expression -> . vector
    (60) expression -> . uminus
    (61) expression -> . transposition
    (62) expression -> . matrix_element
    (63) expression -> . vector_element
    (64) num_expression -> . number
    (65) num_expression -> . var
    (32) matrix -> . [ vectors ]
    (29) matrix_function -> . EYE ( INT )
    (30) matrix_function -> . ONES ( INT )
    (31) matrix_function -> . ZEROS ( INT )
    (35) vector -> . [ variables ]
    (67) uminus -> . - expression
    (68) transposition -> . expression '
    (44) matrix_element -> . var [ INT , INT ]
    (43) vector_element -> . var [ INT ]
    (45) number -> . INT
    (46) number -> . FLOAT
    (66) var -> . ID

    [               shift and go to state 48
    EYE             shift and go to state 49
    ONES            shift and go to state 51
    ZEROS           shift and go to state 52
    -               shift and go to state 37
    INT             shift and go to state 50
    FLOAT           shift and go to state 53
    ID              shift and go to state 19

    condition                      shift and go to state 60
    expression                     shift and go to state 61
    num_expression                 shift and go to state 38
    matrix                         shift and go to state 39
    matrix_function                shift and go to state 40
    vector                         shift and go to state 41
    uminus                         shift and go to state 42
    transposition                  shift and go to state 43
    matrix_element                 shift and go to state 44
    vector_element                 shift and go to state 45
    number                         shift and go to state 46
    var                            shift and go to state 47

state 25

    (12) instruction -> WHILE ( . condition ) instruction
    (15) condition -> . expression EQ expression
    (16) condition -> . expression NEQ expression
    (17) condition -> . expression LE expression
    (18) condition -> . expression GE expression
    (19) condition -> . expression < expression
    (20) condition -> . expression > expression
    (48) expression -> . expression + expression
    (49) expression -> . expression - expression
    (50) expression -> . expression * expression
    (51) expression -> . expression / expression
    (52) expression -> . expression DOTADD expression
    (53) expression -> . expression DOTSUB expression
    (54) expression -> . expression DOTMUL expression
    (55) expression -> . expression DOTDIV expression
    (56) expression -> . num_expression
    (57) expression -> . matrix
    (58) expression -> . matrix_function
    (59) expression -> . vector
    (60) expression -> . uminus
    (61) expression -> . transposition
    (62) expression -> . matrix_element
    (63) expression -> . vector_element
    (64) num_expression -> . number
    (65) num_expression -> . var
    (32) matrix -> . [ vectors ]
    (29) matrix_function -> . EYE ( INT )
    (30) matrix_function -> . ONES ( INT )
    (31) matrix_function -> . ZEROS ( INT )
    (35) vector -> . [ variables ]
    (67) uminus -> . - expression
    (68) transposition -> . expression '
    (44) matrix_element -> . var [ INT , INT ]
    (43) vector_element -> . var [ INT ]
    (45) number -> . INT
    (46) number -> . FLOAT
    (66) var -> . ID

    [               shift and go to state 48
    EYE             shift and go to state 49
    ONES            shift and go to state 51
    ZEROS           shift and go to state 52
    -               shift and go to state 37
    INT             shift and go to state 50
    FLOAT           shift and go to state 53
    ID              shift and go to state 19

    condition                      shift and go to state 62
    expression                     shift and go to state 61
    num_expression                 shift and go to state 38
    matrix                         shift and go to state 39
    matrix_function                shift and go to state 40
    vector                         shift and go to state 41
    uminus                         shift and go to state 42
    transposition                  shift and go to state 43
    matrix_element                 shift and go to state 44
    vector_element                 shift and go to state 45
    number                         shift and go to state 46
    var                            shift and go to state 47

state 26

    (13) instruction -> FOR var . = range instruction

    =               shift and go to state 63


state 27

    (26) assignment -> var assignment_op . expression
    (48) expression -> . expression + expression
    (49) expression -> . expression - expression
    (50) expression -> . expression * expression
    (51) expression -> . expression / expression
    (52) expression -> . expression DOTADD expression
    (53) expression -> . expression DOTSUB expression
    (54) expression -> . expression DOTMUL expression
    (55) expression -> . expression DOTDIV expression
    (56) expression -> . num_expression
    (57) expression -> . matrix
    (58) expression -> . matrix_function
    (59) expression -> . vector
    (60) expression -> . uminus
    (61) expression -> . transposition
    (62) expression -> . matrix_element
    (63) expression -> . vector_element
    (64) num_expression -> . number
    (65) num_expression -> . var
    (32) matrix -> . [ vectors ]
    (29) matrix_function -> . EYE ( INT )
    (30) matrix_function -> . ONES ( INT )
    (31) matrix_function -> . ZEROS ( INT )
    (35) vector -> . [ variables ]
    (67) uminus -> . - expression
    (68) transposition -> . expression '
    (44) matrix_element -> . var [ INT , INT ]
    (43) vector_element -> . var [ INT ]
    (45) number -> . INT
    (46) number -> . FLOAT
    (66) var -> . ID

    [               shift and go to state 48
    EYE             shift and go to state 49
    ONES            shift and go to state 51
    ZEROS           shift and go to state 52
    -               shift and go to state 37
    INT             shift and go to state 50
    FLOAT           shift and go to state 53
    ID              shift and go to state 19

    var                            shift and go to state 47
    expression                     shift and go to state 64
    num_expression                 shift and go to state 38
    matrix                         shift and go to state 39
    matrix_function                shift and go to state 40
    vector                         shift and go to state 41
    uminus                         shift and go to state 42
    transposition                  shift and go to state 43
    matrix_element                 shift and go to state 44
    vector_element                 shift and go to state 45
    number                         shift and go to state 46

state 28

    (44) matrix_element -> var [ . INT , INT ]
    (43) vector_element -> var [ . INT ]

    INT             shift and go to state 65


state 29

    (21) assignment_op -> MULASSIGN .

    [               reduce using rule 21 (assignment_op -> MULASSIGN .)
    EYE             reduce using rule 21 (assignment_op -> MULASSIGN .)
    ONES            reduce using rule 21 (assignment_op -> MULASSIGN .)
    ZEROS           reduce using rule 21 (assignment_op -> MULASSIGN .)
    -               reduce using rule 21 (assignment_op -> MULASSIGN .)
    INT             reduce using rule 21 (assignment_op -> MULASSIGN .)
    FLOAT           reduce using rule 21 (assignment_op -> MULASSIGN .)
    ID              reduce using rule 21 (assignment_op -> MULASSIGN .)


state 30

    (22) assignment_op -> DIVASSIGN .

    [               reduce using rule 22 (assignment_op -> DIVASSIGN .)
    EYE             reduce using rule 22 (assignment_op -> DIVASSIGN .)
    ONES            reduce using rule 22 (assignment_op -> DIVASSIGN .)
    ZEROS           reduce using rule 22 (assignment_op -> DIVASSIGN .)
    -               reduce using rule 22 (assignment_op -> DIVASSIGN .)
    INT             reduce using rule 22 (assignment_op -> DIVASSIGN .)
    FLOAT           reduce using rule 22 (assignment_op -> DIVASSIGN .)
    ID              reduce using rule 22 (assignment_op -> DIVASSIGN .)


state 31

    (23) assignment_op -> SUBASSIGN .

    [               reduce using rule 23 (assignment_op -> SUBASSIGN .)
    EYE             reduce using rule 23 (assignment_op -> SUBASSIGN .)
    ONES            reduce using rule 23 (assignment_op -> SUBASSIGN .)
    ZEROS           reduce using rule 23 (assignment_op -> SUBASSIGN .)
    -               reduce using rule 23 (assignment_op -> SUBASSIGN .)
    INT             reduce using rule 23 (assignment_op -> SUBASSIGN .)
    FLOAT           reduce using rule 23 (assignment_op -> SUBASSIGN .)
    ID              reduce using rule 23 (assignment_op -> SUBASSIGN .)


state 32

    (24) assignment_op -> ADDASSIGN .

    [               reduce using rule 24 (assignment_op -> ADDASSIGN .)
    EYE             reduce using rule 24 (assignment_op -> ADDASSIGN .)
    ONES            reduce using rule 24 (assignment_op -> ADDASSIGN .)
    ZEROS           reduce using rule 24 (assignment_op -> ADDASSIGN .)
    -               reduce using rule 24 (assignment_op -> ADDASSIGN .)
    INT             reduce using rule 24 (assignment_op -> ADDASSIGN .)
    FLOAT           reduce using rule 24 (assignment_op -> ADDASSIGN .)
    ID              reduce using rule 24 (assignment_op -> ADDASSIGN .)


state 33

    (25) assignment_op -> = .

    [               reduce using rule 25 (assignment_op -> = .)
    EYE             reduce using rule 25 (assignment_op -> = .)
    ONES            reduce using rule 25 (assignment_op -> = .)
    ZEROS           reduce using rule 25 (assignment_op -> = .)
    -               reduce using rule 25 (assignment_op -> = .)
    INT             reduce using rule 25 (assignment_op -> = .)
    FLOAT           reduce using rule 25 (assignment_op -> = .)
    ID              reduce using rule 25 (assignment_op -> = .)


state 34

    (27) assignment -> matrix_element assignment_op . expression
    (48) expression -> . expression + expression
    (49) expression -> . expression - expression
    (50) expression -> . expression * expression
    (51) expression -> . expression / expression
    (52) expression -> . expression DOTADD expression
    (53) expression -> . expression DOTSUB expression
    (54) expression -> . expression DOTMUL expression
    (55) expression -> . expression DOTDIV expression
    (56) expression -> . num_expression
    (57) expression -> . matrix
    (58) expression -> . matrix_function
    (59) expression -> . vector
    (60) expression -> . uminus
    (61) expression -> . transposition
    (62) expression -> . matrix_element
    (63) expression -> . vector_element
    (64) num_expression -> . number
    (65) num_expression -> . var
    (32) matrix -> . [ vectors ]
    (29) matrix_function -> . EYE ( INT )
    (30) matrix_function -> . ONES ( INT )
    (31) matrix_function -> . ZEROS ( INT )
    (35) vector -> . [ variables ]
    (67) uminus -> . - expression
    (68) transposition -> . expression '
    (44) matrix_element -> . var [ INT , INT ]
    (43) vector_element -> . var [ INT ]
    (45) number -> . INT
    (46) number -> . FLOAT
    (66) var -> . ID

    [               shift and go to state 48
    EYE             shift and go to state 49
    ONES            shift and go to state 51
    ZEROS           shift and go to state 52
    -               shift and go to state 37
    INT             shift and go to state 50
    FLOAT           shift and go to state 53
    ID              shift and go to state 19

    matrix_element                 shift and go to state 44
    expression                     shift and go to state 66
    num_expression                 shift and go to state 38
    matrix                         shift and go to state 39
    matrix_function                shift and go to state 40
    vector                         shift and go to state 41
    uminus                         shift and go to state 42
    transposition                  shift and go to state 43
    vector_element                 shift and go to state 45
    number                         shift and go to state 46
    var                            shift and go to state 47

state 35
